[gd_scene load_steps=12 format=3 uid="uid://cd44jek2l2vun"]

[ext_resource type="Texture2D" uid="uid://bdvh53tjlubwk" path="res://Art Assets/Spray1.png" id="1_6qvw7"]
[ext_resource type="Script" path="res://Script/spray.gd" id="1_qai1s"]
[ext_resource type="Script" path="res://Script/Components/HoldComponent.gd" id="2_es161"]
[ext_resource type="Texture2D" uid="uid://dr6y8rnd1ij8q" path="res://Art Assets/Spray_mist_1.png" id="4_474kh"]
[ext_resource type="Texture2D" uid="uid://b7upfsnf1ni8u" path="res://Art Assets/Spray_mist_2.png" id="5_pe7n7"]
[ext_resource type="Texture2D" uid="uid://bqwoiwaoedyii" path="res://Art Assets/Spray_mist_3.png" id="6_8d8f0"]
[ext_resource type="AudioStream" uid="uid://dyhg5ne76twse" path="res://Audio/Spray.mp3" id="7_5vn02"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdvmy"]
size = Vector2(126.5, 196)

[sub_resource type="CircleShape2D" id="CircleShape2D_kvrem"]
radius = 97.3242

[sub_resource type="Animation" id="Animation_kjcdw"]
resource_name = "Spraying"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("4_474kh"), ExtResource("5_pe7n7"), ExtResource("6_8d8f0")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ba71t"]
_data = {
"Spraying": SubResource("Animation_kjcdw")
}

[node name="Spray" type="Node2D"]
z_index = 45
script = ExtResource("1_qai1s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4.5, 49.5)
texture = ExtResource("1_6qvw7")

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = 60
position = Vector2(-153, -59)
texture = ExtResource("4_474kh")

[node name="HoldComponent" type="Node2D" parent="."]
script = ExtResource("2_es161")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-4.5, 49.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.75, 2)
shape = SubResource("RectangleShape2D_cdvmy")

[node name="Area2D2" type="Area2D" parent="." groups=["angel_killer"]]
position = Vector2(-4.5, 49.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-175.5, -92.5)
shape = SubResource("CircleShape2D_kvrem")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ba71t")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5vn02")
volume_db = -8.0

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Area2D" to="HoldComponent" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_area_2d_2_area_exited"]
